--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/jest": "^27.0.2",
     "@types/selenium-webdriver": "^4.0.16",
     "chromedriver": "^107.0.3",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "geckodriver": "^2.0.4",
     "jest": "^27.3.1",
